added product data to pflichtenheft

--- a/docs/Lastenheft.tex
+++ b/docs/Lastenheft.tex
@@ -81,17 +81,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Warum wird das Projekt gemacht?           						 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
 
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,
 
 \section{Produkteinsatz}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Wer ist die Zielgruppe?                   						 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergaren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
-
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,
+Der Microservice soll in die Infrastruktur von Symphony eingegliedert werden, um für Anbieter die Funktion der Anreicherung ihrer Produktdaten zu ermöglichen.
 
 \section{Funktionale Anforderungen}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -110,9 +106,23 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{usecase}
   \addheading{Nummer}{Beschreibung} 
-  \addrow{/PD10/}{asdfasdf asdf asdf }
-  \addrow{/PD20/}{asdf asdf asfas asdfas asdf}
-  \addrow{/PD30/}{asdf asdf asdfa a}
+  \addrow{/PD10/}{Produkte haben einen Namen}
+  \addrow{/PD20/}{Produkte haben eine Kurzbeschreibung}
+  \addrow{/PD30/}{Produkte haben eine Detailbeschreibung}
+  \addrow{/PD40/}{Produkte haben eine Feature Tabelle}
+  \addrow{/PD50/}{Ein Produkt hat ein Hauptbild}
+  \addrow{/PD60/}{Ein Produkt hat Medien in einer Galerie} 
+  \addrow{/PD70/}{Anbieter haben mehrere Produkte}
+  \addrow{/PD80/}{Anbieter haben einen Namen}
+  \addrow{/PD90/}{Anbieter haben eine Kurzbeschreibung}
+  \addrow{/PD100/}{Anbieter haben eine Detailbeschreibung}
+  \addrow{/PD110/}{Anbieter haben eine Feature Tabelle}
+  \addrow{/PD120/}{Ein Anbieter hat ein Hauptbild}
+  \addrow{/PD130/}{Ein Anbieter hat Medien in einer Galerie} 
+  \addrow{/PD140/}{Ein Feature in der Feature Tabelle hat einen Titel und eine Beschreibung}
+  \addrow{/PD150/}{Eine Feature Tabelle hat mehrere Features}
+  \addrow{/PD160/}{Medien in der Galerie können PDFs oder Bilder sein}
+  \addrow{/PD170/}{Ein User hat einen Namen und ein Passwort}
 \end{usecase}
 
 \section{Nichtfunktionale Anforderungen}
