--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -78,9 +78,38 @@
  \pagenumbering{arabic}
  
 \section{Zielbestimmung}
+\subsection{Musskriterien}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Warum wird das Projekt gemacht?           						 %
+% Was muss das Programm können?                   					 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{usecase}
+  \addheading{Nummer}{Beschreibung} 
+  \addrow{/FA10/}{Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam}
+  \addrow{/FA20/}{Lorem ipsum dolor sit amet, consetetur sadipscing elitr}
+  \addrow{/FA30/}{adasdfasdf asdf asdfas}
+\end{usecase}
+
+\subsection{Wunschkriterien}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Was muss das Programm können?                   					 %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{usecase}
+  \addheading{Nummer}{Beschreibung} 
+  \addrow{/FA10/}{Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam}
+  \addrow{/FA20/}{Lorem ipsum dolor sit amet, consetetur sadipscing elitr}
+  \addrow{/FA30/}{adasdfasdf asdf asdfas}
+\end{usecase}
+
+\subsection{Abgrenzungskriterien}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Was muss das Programm können?                   					 %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{usecase}
+  \addheading{Nummer}{Beschreibung} 
+  \addrow{/FA10/}{Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam}
+  \addrow{/FA20/}{Lorem ipsum dolor sit amet, consetetur sadipscing elitr}
+  \addrow{/FA30/}{adasdfasdf asdf asdfas}
+\end{usecase}
 
 
 \section{Produkteinsatz}
@@ -88,6 +117,10 @@
 % Wer ist die Zielgruppe?                   						 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Der Microservice soll in die Infrastruktur von Symphony eingegliedert werden, um für Anbieter die Funktion der Anreicherung ihrer Produktdaten zu ermöglichen.
+
+\subsection{Zielgruppe}
+
+\subsection{Anwendungsbereiche}
 
 \section{Funktionale Anforderungen}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -133,8 +166,9 @@ Der Microservice soll in die Infrastruktur von Symphony eingegliedert werden, um
 \end{usecase}
 
 \section{Systemmodelle}
-\subsection{Szenarien}
 \subsection{Anwendungsfälle}
+\subsection{Benutzeroberfläche}
+
 
 \clearpage
 \input{Glossar} 
