added collaborators names

--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -28,7 +28,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Variablen                                 						 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\authorName}{Dustin, Rene, Christof, Jana, Malte, Daniel Schruhl}
+\newcommand{\authorName}{Dustin Spallek, Rene Kretschmer, Christof Rode, Jana Wengenroth, Malte Scheller, Daniel Schruhl}
 \newcommand{\projektName}{Microservices mit Angular}
 \newcommand{\tags}{\authorName, Lastenheft}
 \newcommand{\glossarName}{Glossar}
@@ -166,7 +166,7 @@ Der Microservice soll in die Infrastruktur von Symphony eingegliedert werden, um
 \end{usecase}
 
 \section{Systemmodelle}
-\subsection{Anwendungsfälle}
+\subsection{Datenmodell}
 \subsection{Benutzeroberfläche}
 
 
