target group and stuff added

--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -119,8 +119,10 @@
 Der Microservice soll in die Infrastruktur von Symphony eingegliedert werden, um für Anbieter die Funktion der Anreicherung ihrer Produktdaten zu ermöglichen.
 
 \subsection{Zielgruppe}
+Unsere Zielgruppe sind alle Mitarbeiter der Anbieter, die einen Zugang zum System haben.
 
 \subsection{Anwendungsbereiche}
+Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter und Produktdaten.
 
 \section{Funktionale Anforderungen}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
