added pics in pflichtenheft

--- a/docs/Pflichtenheft.tex
+++ b/docs/Pflichtenheft.tex
@@ -167,11 +167,56 @@ Administrative Anwendungsbereiche zur Verwaltung und Anreicherung der Anbieter u
   \addrow{/NF20/}{ asdf asdf asdftergfgasdgewr asdfh}
 \end{usecase}
 
-\section{Systemmodelle}
-\subsection{Datenmodell}
-\subsection{Benutzeroberfläche}
+\clearpage
 
+\section{Systemmodelle}
+
+\subsection{Datenmodell}
+
+\begin{figure}[!htb]
+  \centering
+     \includegraphics[width=1.0\textwidth]{FDM.png}
+  \caption{Fachliches Datenmodell}
+  \label{fig:fmd}
+\end{figure}
 
 \clearpage
-\input{Glossar} 
+
+\subsection{Benutzeroberfläche}
+
+\begin{figure}[!htb]
+  \centering
+     \includegraphics[width=1.0\textwidth]{projmicro_login.png}
+  \caption{Login Mockup}
+  \label{fig:login}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+     \includegraphics[width=1.0\textwidth]{projmicro_auswahl.png}
+  \caption{Auswahlfenster Mockup}
+  \label{fig:selection}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+     \includegraphics[width=1.0\textwidth]{projmicro_edit.png}
+  \caption{Datensatz Bearbeitungs Mockup}
+  \label{fig:edit}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+     \includegraphics[width=1.0\textwidth]{projmicro_edit_dateiauswahl.png}
+  \caption{Datensazu Bearbeitungs Mockup mit Upload}
+  \label{fig:edit_file}
+\end{figure}
+
+\begin{figure}[!htb]
+  \centering
+     \includegraphics[width=1.0\textwidth]{projmicro_upload.png}
+  \caption{Dateiverwaltung Mockup}
+  \label{fig:selection}
+\end{figure}
+
 \end{document}
